--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <title>Is this gov.ph site secure?</title>
+    <title>Which people need pleasing?</title>
 
     <meta name="description" content="Show which gov.ph sites are secure and when their SSL certificates expire." />
     <meta property="og:title" content="Is this gov.ph site secure?" />
